salesforce_sfdx/main/default/objects/CCI_Document__c/CCI_Document__c.object-meta.xml
<CustomObject>
    <description>This object will store the mandatory field required for P8 for retrieval/upload documents to P8 System</description>
    <label>Document</label>
    <nameField>
        <displayFormat>Doc-{0000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>