salesforce_sfdx/main/default/objects/CCI_Document__c/fields/Document_Class__c.field-meta.xml
<CustomField>
    <fullName>Document_Class__c</fullName>
    <label>Document Class</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Object_Store__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLAIMS</fullName>
            </value>
            <value>
                <fullName>INDIVIDUALUNDERWRITING</fullName>
            </value>
            <value>
                <fullName>LEGAL</fullName>
            </value>
            <value>
                <fullName>MEDRECBCBS</fullName>
            </value>
            <value>
                <fullName>MEMAPP</fullName>
            </value>
            <value>
                <fullName>MEMAUX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>