salesforce_sfdx/main/default/objects/CCI_Document__c/fields/Document_Id_Ext__c.field-meta.xml
<CustomField>
    <fullName>Document_Id_Ext__c</fullName>
    <description>This will store the response received from the P8 after upload.</description>
    <externalId>true</externalId>
    <label>Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>