salesforce_sfdx/main/default/objects/CCI_Document__c/fields/Document_Title__c.field-meta.xml
<CustomField>
    <fullName>Document_Title__c</fullName>
    <label>Document Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>