salesforce_sfdx/main/default/objects/CCI_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Object_Store__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ADJ</fullName>
                <label>Adjustment Request</label>
            </value>
            <value>
                <fullName>CCM</fullName>
                <label>Check Control Memo</label>
            </value>
            <value>
                <fullName>COB</fullName>
                <label>COB Questionairre</label>
            </value>
            <value>
                <fullName>COCC</fullName>
                <label>Certification of Credible Coverage</label>
            </value>
            <value>
                <fullName>COR</fullName>
                <label>Correspondence</label>
            </value>
            <value>
                <fullName>RECON</fullName>
                <label>Reconsideration and Appeals</label>
            </value>
            <value>
                <fullName>REVIW</fullName>
                <label>Prior auth., reviews, precert</label>
            </value>
            <value>
                <fullName>SUBRO</fullName>
                <label>Subrogation and Workers Comp</label>
            </value>
            <value>
                <fullName>APEAL</fullName>
                <label>Member Appeals</label>
            </value>
            <value>
                <fullName>MSP1</fullName>
                <label>MSP Demand Summary Letter</label>
            </value>
            <value>
                <fullName>MSP2</fullName>
                <label>MSP Interest Letter</label>
            </value>
            <value>
                <fullName>MSP3</fullName>
                <label>MSP Intent to Refer</label>
            </value>
            <value>
                <fullName>MSP4</fullName>
                <label>MSP Defense Letter</label>
            </value>
            <value>
                <fullName>MSP5</fullName>
                <label>MSP Resolve Letter</label>
            </value>
            <value>
                <fullName>MSP6</fullName>
                <label>MSP Treasury Letter</label>
            </value>
            <value>
                <fullName>DLTR</fullName>
                <label>Defense Letter</label>
            </value>
            <value>
                <fullName>AUTHR</fullName>
                <label>Authorizations</label>
            </value>
            <value>
                <fullName>HIPAA</fullName>
                <label>HIPAA Authorization</label>
            </value>
            <value>
                <fullName>OSCAR</fullName>
                <label>Coverage History</label>
            </value>
            <value>
                <fullName>MSP</fullName>
                <label>MSP - Medical Service Plan</label>
            </value>
            <value>
                <fullName>ICOR</fullName>
            </value>
            <value>
                <fullName>INSD</fullName>
                <label>Legal Insurance Department</label>
            </value>
            <value>
                <fullName>PRVCY</fullName>
                <label>Legal HIPAA Privacy Documents</label>
            </value>
            <value>
                <fullName>APLS</fullName>
                <label>Legal Appeals</label>
            </value>
            <value>
                <fullName>LSUIT</fullName>
                <label>Legal Lawsuits</label>
            </value>
            <value>
                <fullName>MEREC</fullName>
                <label>Medical Records</label>
            </value>
            <value>
                <fullName>MRCOR</fullName>
                <label>Medical Correspondence</label>
            </value>
            <value>
                <fullName>MEFAC</fullName>
                <label>Medical Facts</label>
            </value>
            <value>
                <fullName>CASH</fullName>
                <label>Daily Deposit Report</label>
            </value>
            <value>
                <fullName>COC</fullName>
                <label>Continuation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>