salesforce_sfdx/main/default/objects/CCI_Document__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABEX</fullName>
                <label>ABCBS - Exchange</label>
            </value>
            <value>
                <fullName>ABOF</fullName>
                <label>ABCBS - Off Exchange</label>
            </value>
            <value>
                <fullName>ABSH</fullName>
                <label>ABCBS Shop</label>
            </value>
            <value>
                <fullName>AO</fullName>
                <label>Access Only</label>
            </value>
            <value>
                <fullName>BAA</fullName>
                <label>Blue Advantage Reg Bus</label>
            </value>
            <value>
                <fullName>BALF</fullName>
                <label>Blue Advantage Level Funded</label>
            </value>
            <value>
                <fullName>BANA</fullName>
            </value>
            <value>
                <fullName>BCBS</fullName>
                <label>ENTERPRISE WIDE</label>
            </value>
            <value>
                <fullName>FEP</fullName>
            </value>
            <value>
                <fullName>GCPS</fullName>
                <label>ABCBS</label>
            </value>
            <value>
                <fullName>HA</fullName>
                <label>HEALTH ADVANTAGE</label>
            </value>
            <value>
                <fullName>HAEX</fullName>
                <label>Health Advantage Exchange</label>
            </value>
            <value>
                <fullName>ITS</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
                <label>Medipak Advantage</label>
            </value>
            <value>
                <fullName>MDPK</fullName>
                <label>Medipak</label>
            </value>
            <value>
                <fullName>USA</fullName>
                <label>BLUE ADVANTAGE</label>
            </value>
            <value>
                <fullName>USAM</fullName>
                <label>USAble Mutual</label>
            </value>
            <value>
                <fullName>WM</fullName>
                <label>Walmart</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>