salesforce_sfdx/main/default/objects/CCI_Document__c/fields/Object_Store__c.field-meta.xml
<CustomField>
    <fullName>Object_Store__c</fullName>
    <label>Object Store</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PaperClaimsOS</fullName>
            </value>
            <value>
                <fullName>MemAppOS</fullName>
            </value>
            <value>
                <fullName>LegalOS</fullName>
            </value>
            <value>
                <fullName>MedRecOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>